@@ -1,15 +1,17 @@
 library(Rllvm)
 
 m = Module("ptx kernel")
-fun = simpleFunction("kern", VoidType, n = Int32Type, out = Int32PtrType, mod = m)
+fun = simpleFunction("kern", VoidType, N = Int32Type, out = Int32PtrType, mod = m)
 ir = fun$ir
+localVars = fun$vars
 fun = fun$fun
-setMetadata(m, "nvvm.annotation", list(fun, "kernel", 1L))
+
+setMetadata(m, "nvvm.annotations", list(fun, "kernel", 1L))
 
 dimFunNames = c("llvm.nvvm.read.ptx.sreg.ctaid.x",
-         "llvm.nvvm.read.ptx.sreg.ntid.x",
-         "llvm.nvvm.read.ptx.sreg.tid.x",
-         "llvm.ptx.read.nctaid.x")
+	        "llvm.nvvm.read.ptx.sreg.ntid.x",
+                "llvm.nvvm.read.ptx.sreg.tid.x",
+                "llvm.ptx.read.nctaid.x")
 dimFuns = 
   lapply(dimFunNames,
         function(id) {
@@ -23,11 +25,26 @@ mul = ir$binOp(Mul, blockId, blockDim)
 threadId = ir$createCall(dimFuns[["llvm.nvvm.read.ptx.sreg.tid.x"]])
 idx = ir$binOp(Add, mul, threadId)
 
-params = getParameters(fun)
-ir$createGEP(params$out, ir$createSExt(idx, 64L))
+i = ir$createLocalVariable(Int32Type, "i")
+ir$createStore(idx, i)
 
+#!!! Put in test that idx < N
+set = Block(fun, "set")
+end = Block(fun, "return")
+
+cond = ir$createICmp(ICMP_SLT, i, localVars$N)
+ir$createCondBr(cond, set, end)
+
+ir$setInsertBlock(set)
+#!!! We need this assignment to be in the global address space (1), not local.
+gep = ir$createGEP(ir$createLoad(localVars$out), ir$createSExt(ir$createLoad(i), 64L))
+ir$createStore(ir$createLoad(i), gep)
+ir$createBr(end)
+
+ir$setInsertBlock(end)
 ir$createReturn()
 
+verifyModule(m)
 
 InitializeNVPTXTarget()
 arch = "nvptx64"
@@ -36,7 +53,7 @@ tri <- getDefaultTargetTriple()
 setTargetTriple(m, tri)
 
 trgt = lookupTarget(tri, arch)
-machine = createTargetMachine(trgt, tri, "sm_20") 
+machine = createTargetMachine(trgt, tri, "sm_30") 
 
 # Now add the passes to generate the code.
 
@@ -63,3 +80,19 @@ run(pm, m)
 flush(out)
 code = as(stream, "character")
 print(nchar(code))
+
+
+if(FALSE) {
+  library(RCUDA)
+
+  cuda.mod = cuModuleLoadDataEx(code)
+  N = as.integer(2^20)
+  ans = integer(N)
+#  out = .gpu(cuda.mod$kern,  N, ans = ans, outputs = "ans", gridBy = N)
+  out = .gpu(cuda.mod$kern,  N, ans = ans, outputs = "ans", gridDim = c(2^7, 2^8), blockDim = c(32))
+}
+
+if(FALSE) {
+  library(Rnvvm)
+  code = generatePTX(code)
+}
