@@ -10,6 +10,8 @@ Version 0.6-0
 
 	*  More support for raw and formatted ostreams
 
+	*  setDataLayout() method for Module.
+
 Version 0.5-0
 
 	*  show() methods for Module, Function, Type to make the
